--- a/game_car.html
+++ b/game_car.html
@@ -173,6 +173,7 @@
         <li><strong>Steer with Tilt:</strong> Tilt your device to control the car’s direction.</li>
         <li><strong>Avoid Obstacles:</strong> Stay clear of parked cars and other hazards. If you leave the road boundaries, you will incur penalties.</li>
         <li><strong>Collect Coins:</strong> Coins are scattered along the road. Collect them to earn bonus points.</li>
+        <li><strong>Pause the Game:</strong> Press the <em>Spacebar</em> at any time to pause or resume the game.</li>
         <li><strong>Handle Curves & Bridges:</strong> Some road segments curve or feature bridges. Adjust your tilt to maintain control and stay on track.</li>
         <li><strong>Score Calculation:</strong> Your score increases with distance traveled and coins collected but decreases with penalties for off-track driving or collisions.</li>
         <li><strong>Game Duration:</strong> Select your desired game duration from the menu before starting.</li>
