--- a/game_car.html
+++ b/game_car.html
@@ -134,7 +134,17 @@
   <div id="scoreChange"></div>
   <div id="highScore" style="display:none;">High Score: 0</div>
   <div id="stopwatch" style="display:none;">Time: 0:00</div>
-
+  <div id="flashOverlay" style="
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    pointer-events: none;
+    z-index: 9999;
+    display: none;
+  "></div>
     <!-- NEW: Menu Screen Overlay -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <div id="menuScreen" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: url('menu_wallpaper.jpg') no-repeat center center; background-size: cover; z-index: 2;">
@@ -174,7 +184,7 @@
         <li><strong>Avoid Obstacles:</strong> Stay clear of parked cars and other hazards. If you leave the road boundaries, you will incur penalties.</li>
         <li><strong>Collect Coins:</strong> Coins are scattered along the road. Collect them to earn bonus points.</li>
         <li><strong>Pause the Game:</strong> Press the <em>Spacebar</em> at any time to pause or resume the game.</li>
-        <li><strong>Handle Curves & Bridges:</strong> Some road segments curve or feature bridges. Adjust your tilt to maintain control and stay on track.</li>
+        <li><strong>Handle Curves & Bridges:</strong> Some road segments curve or feature construction zones. Adjust your tilt to maintain control and stay on track.</li>
         <li><strong>Score Calculation:</strong> Your score increases with distance traveled and coins collected but decreases with penalties for off-track driving or collisions.</li>
         <li><strong>Game Duration:</strong> Select your desired game duration from the menu before starting.</li>
         <li><strong>Crash and Penalties:</strong> Collisions with obstacles result in a crash and loss of points. Drive carefully!</li>
@@ -182,6 +192,7 @@
       <button id="closeHowToPlay" type="button">Close</button>      
     </div>
   </div>
+
 
   <script>
     // ----------------------
@@ -192,8 +203,9 @@
     let player;                // The player's car (Group object)
     let obstacles = [];        // Array of obstacle (parked) cars
     let coins = [];            // Array of collectible coins
-    let roadSegments = [];     // Array of segments (road, water, bridge, etc.)
+    let roadSegments = [];     // Array of segments 
     let gameOver = false;
+    let restartTiltStartTime = null;
     let score = 0;
     let coinBonus = 0;         // Bonus score from coins
     let highScore = 0;         // Track the user's best score across attempts
@@ -202,8 +214,8 @@
     let penalty = 0;
     let totalDistance = 0;
     let effectiveScore = 0;
-    let bridgePenaltyActive = false;
-    
+    let constructionSpeedFactor = 1;
+
     // Global variable for player name
     let playerName = "";
 
@@ -283,7 +295,7 @@
         console.log(`Playback speed: ${value}`);
     }
 
-    // Global flag to ensure no two consecutive bridge segments.
+    // Global flag to ensure no two consecutive construction segments.
     let lastSegmentBridge = false;
 
     // ----------------------
@@ -382,7 +394,24 @@
           el.style.opacity = opacity;
         }
       }, 50);
-    }
+        // NEW: Flash a solid red overlay that fades out
+        const flash = document.getElementById("flashOverlay");
+        flash.style.backgroundColor = "rgba(255, 0, 0, 0.25)"; // solid red
+        flash.style.display = "block";
+        flash.style.opacity = 1;
+          fadeOutTime = 200; // fade out over 200ms
+          startTimeFlash = performance.now();
+          flashInterval = setInterval(() => {
+            elapsedFlash = performance.now() - startTimeFlash;
+          if (elapsedFlash >= fadeOutTime) {
+            clearInterval(flashInterval);
+            flash.style.display = "none";
+          } else {
+            flash.style.opacity = 1 - (elapsedFlash / fadeOutTime);
+          }
+        }, 16);
+      }
+  
 
     function showScoreIncrease(text) {
       const el = document.getElementById("scoreChange");
@@ -400,6 +429,22 @@
           el.style.opacity = opacity;
         }
       }, 50);
+        // NEW: Flash a solid yellow overlay that fades out
+        const flash = document.getElementById("flashOverlay");
+        flash.style.backgroundColor = "rgba(255, 255, 0, 0.25)"; // solid yellow
+        flash.style.display = "block";
+        flash.style.opacity = 1;
+          fadeOutTime = 200; // fade out over 200ms
+          startTimeFlash = performance.now();
+          flashInterval = setInterval(() => {
+            elapsedFlash = performance.now() - startTimeFlash;
+          if (elapsedFlash >= fadeOutTime) {
+            clearInterval(flashInterval);
+            flash.style.display = "none";
+          } else {
+            flash.style.opacity = 1 - (elapsedFlash / fadeOutTime);
+          }
+        }, 16);
     }
 
     function animateCrash(object) {
@@ -738,7 +783,7 @@
         }
 
       },
-      bridge: {
+      construction: {
         length: 80,
         spawn: function(zStart, length) {
           // Main 20-wide road plane (light gray)
@@ -793,7 +838,7 @@
 
           // Store safe zone boundaries, etc.
           cautionRoad.userData = {
-            segmentType: "bridge",
+            segmentType: "construction",
             isBridge: true,
             zone1: 4,
             zone2: 6,
@@ -833,20 +878,42 @@
             } else if (player.position.x < -2) {
               distFromSafe = Math.abs(player.position.x) - 2;
             }
+            
+            if (distFromSafe > 0) {
+              // Determine unsafe level based on how far beyond ±2 the car is.
+              let level = Math.ceil(distFromSafe / 2);
+              let factor;
+              if (level === 1) {
+                factor = 1 - 0.25; // 25% decrease
+              } else if (level === 2) {
+                factor = 1 - 0.40; // 40% decrease
+              } else if (level === 3) {
+                factor = 1 - 0.65; // 50% decrease
+              } else {
+                factor = 1 - 0.80; // 70% decrease (level 4 and above)
+              }
+              constructionSpeedFactor = factor;
+            } else {
+              constructionSpeedFactor = 1;
+            }
+
 
             // if distFromSafe <= 0 => no penalty => accumulate onTrackTime
-            if (distFromSafe <= 0) {
-              // car is in safe zone => reward +1 for each 500 ms
-              window.onTrackTime += deltaTime;
+            if (distFromSafe <= 0 && playerSpeed > 0) {
+            // car is in safe zone and moving => reward +1 for each 350 ms
+            window.onTrackTime += deltaTime;
               while (window.onTrackTime >= 350) {
                 // add points
-                coinBonus += 1;
-                showScoreIncrease("+1");
+                coinBonus += 2;
+                showScoreIncrease("+2");
                 updateScore();
                 window.onTrackTime -= 350;
               }
               // reset offTrackTime
               window.offTrackTime = 0;
+            } else if (distFromSafe <= 0) {
+              // car is in safe zone but not moving: do not accumulate reward
+              window.onTrackTime = 0;
             } else {
               // if distFromSafe > 0 => existing logic for penalty
               window.offTrackTime = (window.offTrackTime || 0) + deltaTime;
@@ -894,7 +961,7 @@
       } else {
         const rand = Math.random();
         if (rand < 0.15) {
-          segmentType = "bridge";
+          segmentType = "construction";
         } else if (rand < 0.35) {
           segmentType = "curvedRoad";
         } else {
@@ -904,7 +971,7 @@
       let baseLength = segmentTypes[segmentType].length;
       let segmentLength = baseLength * (0.8 + Math.random() * 0.4);
       segmentTypes[segmentType].spawn(zStart, segmentLength);
-      lastSegmentBridge = (segmentType === "bridge");
+      lastSegmentBridge = (segmentType === "construction");
       spawnZ += segmentLength;
     }
 
@@ -1007,6 +1074,21 @@
     // The main animation loop
     // ----------------------
     function animate() {
+         // Check if the player is on any bridge segment
+         onConstruction = false;
+         for (let seg of roadSegments) {
+           if (seg.userData && seg.userData.segmentType === "construction") {
+             if (player.position.z >= seg.userData.zStart && player.position.z <= seg.userData.zEnd) {
+               onConstruction = true;
+               break;
+             }
+          }
+        }
+
+        // If not on a bridge, reset the bridge speed factor
+        if (!onConstruction) {
+          constructionSpeedFactor = 1;
+        }
       if (gameOver) return;
       animationId = requestAnimationFrame(animate);
 
@@ -1021,7 +1103,7 @@
       }
 
       changeSpeed(speedPercent);
-      playerSpeed = basePlayerSpeed * speedPercent;
+      playerSpeed = basePlayerSpeed * speedPercent * constructionSpeedFactor;
       player.position.z += playerSpeed;
       const tiltInDegrees = -currentTilt.x * (180 / Math.PI);
       player.position.x += tiltInDegrees * lateralSpeedFactor * speedPercent;
@@ -1192,28 +1274,24 @@
     let yThresholdStartTime = null;
 
     function detectGesture(tilt) {
-      if(document.getElementById("gameOver").style.display == "none"){
-        return;
-      }
-      if (tilt.y > 0.5) {
-        if (yThresholdStartTime === null) {
-          yThresholdStartTime = Date.now();
-          console.log("Y threshold exceeded, starting timer...");
-        } else {
-          const elapsedTime = Date.now() - yThresholdStartTime;
-          console.log(`Y threshold maintained for ${(elapsedTime/1000).toFixed(1)} seconds`);
-          if (elapsedTime >= REQUIRED_DURATION) {
-            document.getElementById("startGameBtn").click();
-            delay(5000);
+      // Only trigger restart if game over is showing
+      if (document.getElementById("gameOver").style.display != "none") {
+        const maxTiltThreshold = 0.9; // Adjust as needed
+        if (Math.abs(tilt.y) >= maxTiltThreshold) {
+          if (!restartTiltStartTime) {
+            restartTiltStartTime = Date.now();
+          } else if (Date.now() - restartTiltStartTime >= 1500) { // Held for 2 seconds
+            restartGame();
+            restartTiltStartTime = null;
+            return;
           }
-        }
-      } else {
-        if (yThresholdStartTime !== null) {
-          console.log("Y value dropped below threshold, resetting timer");
-          yThresholdStartTime = null;
+        } else {
+          // Reset timer if tilt is below threshold
+          restartTiltStartTime = null;
         }
       }
     }
+
 
     document.getElementById("restartGameBtn").addEventListener("click", function() {
       restartGame();
@@ -1263,33 +1341,32 @@
   });
 
   document.addEventListener("keydown", function(e) {
-    if (gameOver) return;  // Do not allow pausing/resuming after game over
     if (e.code === "Space") {
-      if (!isPaused) {
-        isPaused = true;
-        cancelAnimationFrame(animationId);
-        // Display "Paused" with bold white styling and different size
-        const overlay = document.getElementById("gameOver");
-        overlay.textContent = "Paused";
-        overlay.style.display = "block";
-        overlay.style.color = "#ffffff";
-        overlay.style.fontWeight = "bold";
-        overlay.style.fontSize = "40px";
-        // Pause the music
-        audio.pause();
-        // Show Home button if desired (assumes homeBtn exists)
-        document.getElementById("homeBtn").style.display = "block";
-      } else {
-        isPaused = false;
-        const overlay = document.getElementById("gameOver");
-        overlay.style.display = "none";
-        document.getElementById("homeBtn").style.display = "none";
-        // Resume music playback
-        audio.play();
-        animate();
+      if (gameOver) {
+        restartGame();
+        return;
       }
-    }
-  });
+    if (!isPaused) {
+      isPaused = true;
+      cancelAnimationFrame(animationId);
+      const overlay = document.getElementById("gameOver");
+      overlay.textContent = "Paused";
+      overlay.style.display = "block";
+      overlay.style.color = "#ffffff";
+      overlay.style.fontWeight = "bold";
+      overlay.style.fontSize = "40px"; 
+      audio.pause();
+      document.getElementById("homeBtn").style.display = "block";
+      } else {
+          isPaused = false;
+          const overlay = document.getElementById("gameOver");
+          overlay.style.display = "none";
+          document.getElementById("homeBtn").style.display = "none";
+          audio.play();
+          animate();
+        }
+      }
+    });
   </script>
 </body>
 </html>
