--- a/game_car.html
+++ b/game_car.html
@@ -169,7 +169,7 @@
     </div>
   
     <div style="text-align: center; margin-top: 20px;">
-      <label for="vehicleColor">Choose your vehicle color:</label>
+      <label for="vehicleColor" style="color: #000000;">Choose your vehicle color:</label>
       <input type="color" id="vehicleColor" value="#0000ff">
     </div>
     <div style="text-align: center; margin-top: 20px;">
